bynkc/tests/fixtures/positive/352_generic_record_inference_spread/input.bynk
commons infer

-- v0.157 (ADR 0183): type-argument inference is order-independent — an empty
-- collection field (which cannot determine `T`) is grounded by a sibling field
-- or the binding's expected type, regardless of field order.
type Box[T] = {
  items: List[T],
  head: T,
}

fn from_head_first() -> Box[Int] {
  Box { head: 5, items: [] }
}

fn from_items_first() -> Box[Int] {
  Box { items: [], head: 5 }
}

type User = { id: Int }

-- A spread override on a generic record is checked with the base's argument
-- substituted in: `head` here must be a `User`.
fn replace_head(b: Box[User], u: User) -> Box[User] {
  Box { ...b, head: u }
}
