bynkc/tests/fixtures/negative/364_generic_record_at_boundary/input.bynk
commons bad

type Box[T] = { value: T }
type User = { id: Int }

-- A generic record instantiation cannot be a field of another record: it is
-- non-boundary in v0.157 (no monomorphised codec is generated for it).
type Wrapper = {
  boxed: Box[User],
}
